--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <h2>
   village contains beautiful scenery
 </h2>
-<img src="C:\Users\sidda\Downloads\WhatsApp Image 2024-12-29 at 21.10.10.jpeg"
+<img src="WhatsApp Image 2024-12-29 at 21.10.10.jpeg"
   width=300>
 <h2>
   green fields can say hiby waving smoothly
 </h2>
-<img src="C:\Users\sidda\Downloads\WhatsApp Image 2024-12-29 at 20.50.26.jpeg"
+<img src="WhatsApp Image 2024-12-29 at 20.50.26.jpeg"
   width=300>
 <h2>
   everyone will have a pure heart and live with happiness and contentment
 </h2>
-<img src="C:\Users\sidda\Downloads\WhatsApp Image 2024-12-29 at 20.50.25 (1).jpeg"
+<img src="WhatsApp Image 2024-12-29 at 20.50.25 (1).jpeg"
   width=300>
